{{$NEXT}}

1.130030  2013-01-03 20:46:58 Europe/London
    Ensure we can pass '0' as a URL parameter.

1.130020  2013-01-02 12:58:44 Europe/London
    Initial version.