@@ -8,7 +8,7 @@ use Test::More;
 # skip tests if we are not online
 use HTTP::Online ':skip_all';
 
-plan tests => 5;
+plan tests => 7;
 
 use WebService::IMDBAPI;
 
@@ -29,3 +29,13 @@ is( $result->imdb_id, $imdb_id );
 $result = $imdbapi->search_by_id($imdb_id);
 is( $result->title,   $title );
 is( $result->imdb_id, $imdb_id );
+
+# title not found
+$title = "300muxed";
+$results = $imdbapi->search_by_title( $title, { limit => 1 } );
+ok( !@{$results} );
+
+# id not found
+$imdb_id = 'abcdef';
+$result  = $imdbapi->search_by_id($imdb_id);
+ok( !$result );
